# llvm-java

./: .gitignore  .travis.yml  README.md  README_zh_CN.md  build-note.md  build.gradle  gradle.properties  note.md  settings.gradle
llvm-binding/: README-cn.md  README.md  README_zh_CN.md  build.gradle
llvm-binding/src/main/java/: module-info.java
llvm-binding/src/main/java/asia/kala/llvm/binding/: Analysis.java  BitReader.java  BitWriter.java  Comdat.java  Core.java  DebugInfo.java  Disassembler.java  DisassemblerTypes.java  ErrorH.java  ErrorHandling.java  ExecutionEngine.java  IRReader.java  Initialization.java  LLVMLoader.java  Linker.java  NativeUtils.java  ObjectH.java  OrcBindings.java  Remarks.java  Support.java  TargetH.java  TargetMachine.java  Types.java  lto.java
llvm-binding/src/main/java/asia/kala/llvm/binding/annotations/: CEnum.java  CInfo.java  Extern.java  LongLong.java  Pointer.java  Signed.java  SizeT.java  Statement.java  Unsigned.java
llvm-binding/src/main/java/asia/kala/llvm/binding/transforms/: AggressiveInstCombine.java  Coroutines.java  IPO.java  InstCombine.java  PassManagerBuilder.java  Scalar.java  Utils.java  Vectorize.java
llvm-platform/: build.gradle
llvm-platform/src/main/java/: module-info.java
native-generator/: README.md  build.gradle
native-generator/src/main/java/: module-info.java
native-generator/src/main/java/asia/kala/llvm/generator/: Main.java  TypeMapper.java
native-generator/src/main/resources/: CMakeLists.txt  CoreExtern.cpp  NativeUtils.cpp  llvm-java.cpp  llvm-java.h
src/main/java/: module-info.java
